# njord

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run_containers.sh
.github/workflows/: rust.yaml
assets/: config.yaml  node1.yaml  node2.yaml  node3.yaml  node4.yaml  node5.yaml
client/: Cargo.toml
protobuf/: node.proto  registry.proto
src/: main.rs
src/discovery/: discover.rs  mod.rs  nodes.rs
src/events/: events.rs
src/protos/: node.rs  registry.rs
src/protos/internal/: registry.rs
src/server/: mod.rs  node.rs
src/storage/: core.rs  generic.rs  local.rs  mod.rs
src/util/: config.rs  mod.rs
