[package]
name = "njord"
version = "0.1.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2.11", features = ["full"] }
serde = "1.0.99"
serde_derive = "1.0.99"
clap = "2.33.0"
config = "0.9.3"
env_logger = "0.6.2"
log = "0.4.8"
tonic = "0.1.1"