[package]
name = "client"
version = "0.1.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.19"
serde = "1.0.99"
serde_derive = "1.0.99"
env_logger = "0.6.2"
log = "0.4.8"
runtime= "=0.3.0-alpha.7"